--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ h3,
 h4,
 body {
   font-family: 'Kantumruy Pro';
-  font-weight: 600; /* 기본 가중치 */
+  font-weight: 550;
   font-style: normal;
 }
 
@@ -12,5 +12,5 @@ button,
 input,
 textarea,
 select {
-  font-family: inherit; /* 부모의 폰트 설정을 상속 */
+  font-family: inherit;
 }
