--- a/src/components/notificaton/NotificationPage.css
+++ b/src/components/notificaton/NotificationPage.css
@@ -1,59 +1,77 @@
 .notification-page {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    background-color: #f8f8f8;
-  }
-  
-  h1 {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 20px;
-  }
-  
-  .notification-list {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .notification-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: white;
-    border-radius: 10px;
-    padding: 10px 15px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .notification-content {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-  }
-  
-  .notification-icon img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-  }
-  
-  .notification-text p {
-    font-size: 16px;
-    color: #555;
-    margin: 0;
-  }
-  
-  .update-button {
-    background-color: #f2b231;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .update-button:hover {
-    background-color: #e0a829;
-  }
-  
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  background-color: white;
+}
+
+.notification-list {
+  display: flex;
+  flex-direction: column;
+  gap: 17px; /* 알림 간 간격 */
+}
+
+.notification-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px 15px;
+  border: none;
+  box-shadow: none;
+}
+
+.notification-content {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+
+.notification-icon img {
+  width: 30px; 
+  height: 30px;
+  border-radius: 0; 
+}
+
+.notification-text p {
+  font-size: 14px;
+  color: #555;
+  margin: 0;
+}
+
+.notification-button {
+  display: flex;
+  align-items: center;
+}
+
+.profit-button,
+.loss-button {
+  border: none;
+  padding: 3px 10px;
+  border-radius: 12px;
+  font-size: 14px; 
+  cursor: pointer;
+}
+
+.loss-button {
+  background-color: #d1e7ff;
+  color: #0056b3;
+}
+
+.profit-button {
+  background-color: #ffd6d6;
+  color: #d9534f;
+}
+
+.profit-button:hover {
+  background-color: #cce5ff;
+}
+
+.loss-button:hover {
+  background-color: #ffcccc;
+}
+
+.small-button {
+  padding: 4px 8px; 
+  font-size: 11px; 
+}
