--- a/src/components/search/SearchStock.css
+++ b/src/components/search/SearchStock.css
@@ -67,7 +67,7 @@
     font-size: 1rem;
     padding: 5px 20px;
     border-radius: 10px;
-    background-color: #4b7bf5;
+    /* background-color: #4b7bf5; */
     color: white;
     width: 80px;
     border: none;
